feature: highlighted Texteditor

--- a/ScriptManager/Localizable.xcstrings
+++ b/ScriptManager/Localizable.xcstrings
@@ -193,6 +193,7 @@
       }
     },
     "cd /Desktop/ sh ..." : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
