--- a/ScriptManager/Localizable.xcstrings
+++ b/ScriptManager/Localizable.xcstrings
@@ -77,6 +77,7 @@
       }
     },
     "add-new-shortcut" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -279,7 +280,7 @@
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Anwendung beenden"
+            "value" : "Beenden"
           }
         },
         "en" : {
@@ -342,6 +343,26 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Countdown"
+          }
+        }
+      }
+    },
+    "creator" : {
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Entwickler - Daniel Filler"
+          }
+        }
+      }
+    },
+    "creator-info" : {
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Als iOS- / macOS-Entwickler erstelle ich kreative Lösungen um deinen Arbeitsalltag zu erleichtern."
           }
         }
       }
@@ -493,9 +514,6 @@
           }
         }
       }
-    },
-    "empty-shortcuts" : {
-
     },
     "errors" : {
       "localizations" : {
@@ -763,6 +781,26 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Icons"
+          }
+        }
+      }
+    },
+    "info" : {
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Info"
+          }
+        }
+      }
+    },
+    "info-title" : {
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Info"
           }
         }
       }
@@ -1118,6 +1156,7 @@
       }
     },
     "save-shortcut" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -1223,6 +1262,16 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "ScriptManager"
+          }
+        }
+      }
+    },
+    "scriptmanager-info" : {
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Der ScriptManager ist ein einfach gestaltetes Tool, um deine tägliche Arbeit zu erleichtern. Das Tool ist eine Open-Source-Anwendung und wird stetig weiterentwickelt. Bei Problemen kannst du ganz einfach ein Issue auf GitHub erstellen."
           }
         }
       }
@@ -1419,6 +1468,7 @@
       }
     },
     "shortcut" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -1429,6 +1479,7 @@
       }
     },
     "shortcut-keys" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -1439,6 +1490,7 @@
       }
     },
     "shortcut-script" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -1459,6 +1511,7 @@
       }
     },
     "shortcuts" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
