--- a/ScriptManager/Localizable.xcstrings
+++ b/ScriptManager/Localizable.xcstrings
@@ -190,7 +190,7 @@
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Unterbrechen"
+            "value" : "Skript abbrechen"
           }
         },
         "en" : {
@@ -213,6 +213,16 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Open logs"
+          }
+        }
+      }
+    },
+    "button-monitor" : {
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ausgabe anzeigen"
           }
         }
       }
